implements join table using << operator

--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -11,4 +11,4 @@
 <% end %>
 
 <h3> Ingredient List </h3>
-<ul><%= @ingredient.show(:name) %></ul>
+<!-- <ul><%# @ingredient.show(:name) %></ul> -->
