--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%# this gets us bootstrap from the CDN! %>
     <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' %>
   </head>
 
@@ -17,12 +19,19 @@
 
           <a href="/" class="btn btn-success">Home</a>
           <a href="/recipes" class="btn btn-success">View Recipes</a>
-          <a href="/" class="btn btn-success">Home</a>
-
 
       </nav>
     </div>
     <div class="container">
+        <% if flash[:notice] %>
+          <%# this basically is an extension of the flash where the flash now contains a hash, so the extra string gets into the hash and pulls out values we need %>
+  
+          <div style="animation-delay: 2s; animation: fadeMe 2s;" class="<%= flash[:notice]["class"] %>">
+          <%=   flash[:notice]["body"] %>
+          </div>
+        <% end %>
+        <%= flash[:alert] %>
+
       <%= yield %>
     </div>
   </body>
