--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,7 +2,9 @@
 
 <% if @recipes.any? %>
   <h2>Current Recipes:</h2>
-  <% @recipes.each do |r| %>
-    <%= link_to r.title, recipe_path(r) %>
-  <% end %>
+  <ul>
+    <% @recipes.each do |r| %>
+      <li><%= link_to r.title, recipe_path(r) %></li>
+    <% end %>
+  </ul>
 <% end %>
